# pycpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: conda.yml  test.yml  wheels.yml
src/cpp/: main.cpp
src/demo/: cppcore.pyi
tests/: test_basic.py
tools/: cibw_before.sh  cibw_before_linux.sh  cibw_before_windows.ps1  cibw_before_windows.sh  cibw_linux_before_all.sh
