[project]
name = "demo"
dynamic = ["version"]
license = "MIT"
authors = [
  {name = "Andy Shapiro", email = "shapiro.andy@epa.gov"},
]
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "demo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["demo*"]

[build-system]
requires = [
    "setuptools",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = ["test_*.py"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
