[project]
name = "demo"
dynamic = ["version"]
license = "MIT"
authors = [
  {name = "Andy Shapiro", email = "shapiromatron@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.4.1",
  "mypy~=1.17.1",
]

[tool.setuptools.dynamic]
version = {attr = "demo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["demo*"]

[build-system]
requires = [
  "setuptools",
  "pybind11~=3.0.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = ["test_*.py"]
